--- a/src/CSS/Form.css
+++ b/src/CSS/Form.css
@@ -125,7 +125,7 @@ fieldset button {
   
   .buttons button {
     padding: 10px 20px; /* Padding interno */
-    background-color: var(--color-fondo); /* Color de fondo */
+    background-color: gray; /* Color de fondo */
     color: #fff; /* Color del texto */
     border: none; /* Sin borde */
     border-radius: 5px; /* Bordes redondeados */
